Issue 119035: JVM Option java.endorsed.dirs set for java application